--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="blue">#002868</color>
+    <color name="background">#FFE8E7EA</color>
+
+
+
+    //indicator color
+    <color name="inactive">#C4C4C4</color>
+    <color name="active">#002868</color>
+
 </resources>
